test: 리뷰 한개 가져오기 api 테스트

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 ### Application version ###
-applicationVersion=0.0.1-SNAPSHOT
+applicationVersion=0.0.1
 
 ### Project configs ###
 projectGroup=dev.bread
