--- a/storage/src/main/resources/storage.yml
+++ b/storage/src/main/resources/storage.yml
@@ -7,25 +7,30 @@ spring:
       hibernate.default_batch_fetch_size: 100
 
 ---
+spring.config.activate.on-profile: local
+
 spring:
-  profiles:
-    active: local
-
-  datasource:
-    hikari:
-      jdbc-url: jdbc:h2:tcp://localhost:9092/~/db/mini-review
-      driver-class-name: org.h2.Driver
-      username: sa
-      password:
-
   jpa:
-    database-platform: H2
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
-        show_sql: true
         format_sql: true
+        show_sql: true
+  h2:
+    console:
+      enabled: true
+
+storage:
+  datasource:
+    core:
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:core;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: sa
+      pool-name: core-db-pool
+      data-source-properties:
+        rewriteBatchedStatements: true
+
 ---
 spring.config.activate.on-profile: live
 
